--- a/.github/workflows/node-deploy.yml
+++ b/.github/workflows/node-deploy.yml
@@ -21,22 +21,22 @@ jobs:
               env:
                   SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
                   ARGS: '-rltgoDzvO --delete'
-                  SOURCE: 'deploy/'
-                  REMOTE_HOST: 'team0.eaglesoftwareteam.com'
+                  SOURCE: ''
+                  REMOTE_HOST: 'ec2-18-117-253-229.us-east-2.compute.amazonaws.com'
                   REMOTE_USER: ubuntu
-                  TARGET: 'nodeapps/course-backend'
+                  TARGET: 'nodeapps/survey-backend'
             - name: Execute SSH commmands on remote server
               uses: JimCronqvist/action-ssh@master
               env:
-                  NAME: 'Root'
+                  NAME: 'ubuntu'
               with:
-                  hosts: 'ubuntu@team0.eaglesoftwareteam.com'
+                  hosts: 'ubuntu@ec2-18-117-253-229.us-east-2.compute.amazonaws.com'
                   privateKey: ${{ secrets.SERVER_SSH_KEY }}
                   debug: false
                   command: |
-                      cd nodeapps/course-backend
+                      cd nodeapps/survey-backend
                       npm install
-                      sudo systemctl stop course-backend
-                      sudo cp course-backend.service /lib/systemd/system/course-backend.service
+                      sudo systemctl stop survey-backend
+                      sudo cp survey-backend.service /lib/systemd/system/survey-backend.service
                       sudo systemctl daemon-reload
-                      sudo systemctl start course-backend
+                      sudo systemctl start survey-backend
