--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+    "start": "node server.js",
+    "bundle": "mkdir deploy && cp -r config controllers models routes util server.js package.json package-lock.json course-backend.service deploy && rm deploy/config/db.config.js && mv deploy/config/prod.db.config.js deploy/config/db.config.js"
+    },
+    
   "keywords": [],
   "author": "",
   "license": "ISC",
