--- a/.github/workflows/node-deploy.yml
+++ b/.github/workflows/node-deploy.yml
@@ -1,5 +1,4 @@
 name: DEPLOY TO STAGING
-
 on:
     pull_request:
         types: [closed]
@@ -13,7 +12,9 @@ jobs:
             - uses: actions/checkout@v2
               with:
                   ref: dev
-            - uses: actions/setup-node@v1
+            - uses: actions/setup-node@v3
+              with:
+                node-version: 16
             - run: npm install
             - run: npm run bundle
             - name: Deploy to Server
@@ -21,14 +22,14 @@ jobs:
               env:
                   SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
                   ARGS: '-rltgoDzvO --delete'
-                  SOURCE: ''
-                  REMOTE_HOST: 'ec2-18-117-253-229.us-east-2.compute.amazonaws.com'
+                  SOURCE: 'deploy/'
+                  REMOTE_HOST: 'ec2-18-117-253-229.us-east-2.compute.amazonaws.com' 
                   REMOTE_USER: ubuntu
                   TARGET: 'nodeapps/survey-backend'
             - name: Execute SSH commmands on remote server
               uses: JimCronqvist/action-ssh@master
               env:
-                  NAME: 'ubuntu'
+                  NAME: 'root'
               with:
                   hosts: 'ubuntu@ec2-18-117-253-229.us-east-2.compute.amazonaws.com'
                   privateKey: ${{ secrets.SERVER_SSH_KEY }}
@@ -36,7 +37,13 @@ jobs:
                   command: |
                       cd nodeapps/survey-backend
                       npm install
+                      sudo mkdir app
+                      sudo mv config controllers middleware models routes app
+                      sudo rm -rf config controllers middleware models routes
                       sudo systemctl stop survey-backend
                       sudo cp survey-backend.service /lib/systemd/system/survey-backend.service
+                      sudo rm survey-backend.service
                       sudo systemctl daemon-reload
                       sudo systemctl start survey-backend
+
+
