node_deploy_files_added

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "bundle": "mkdir deploy && cp -r config controllers models routes util server.js package.json package-lock.json course-backend.service deploy && rm deploy/config/db.config.js && mv deploy/config/prod.db.config.js deploy/config/db.config.js"
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "bundle": "mkdir deploy && cp -r controller express library models routes config.js prod.db.config.js server.js package.json package-lock.json survey-backend.service deploy && rm deploy/config.js && mv deploy/prod.db.config.js deploy/config.js"
     },
     
   "keywords": [],
