--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "bundle": "mkdir deploy && cp -r controller express library models routes config.js prod.db.config.js server.js package.json package-lock.json survey-backend.service deploy && rm deploy/config.js && mv deploy/prod.db.config.js deploy/config.js"
-    },
-    
+    "test": "SET NODE_ENV=test && jest",
+    "detect": "SET NODE_ENV=test && jest --detectOpenHandles",
+    "cover": "SET NODE_ENV=test && jest --coverage"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -17,11 +15,13 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "jest": "^28.1.3",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "random-words": "^1.2.0",
     "sequelize": "^6.21.1",
-    "socket.io": "^4.5.1"
+    "socket.io": "^4.5.1",
+    "supertest": "^6.2.4"
   },
   "devDependencies": {
     "body-parser": "^1.20.0",
