--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "SET NODE_ENV=test && jest",
     "detect": "SET NODE_ENV=test && jest --detectOpenHandles",
-    "cover": "SET NODE_ENV=test && jest --coverage"
+    "cover": "SET NODE_ENV=test && jest --coverage",
+    "bundle": "mkdir deploy && cp -r controller coverage express library models routes config.js prod.db.config.js server.js package.json package-lock.json survey-backend.service deploy && rm deploy/config.js && mv deploy/prod.db.config.js deploy/config.js"
+
   },
   "keywords": [],
   "author": "",
