--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "SET NODE_ENV=test && jest",
-    "detect": "SET NODE_ENV=test && jest --detectOpenHandles",
-    "cover": "SET NODE_ENV=test && jest --coverage",
+    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
     "bundle": "mkdir deploy && cp -r controller coverage express library models routes config.js prod.db.config.js server.js package.json package-lock.json survey-backend.service deploy && rm deploy/config.js && mv deploy/prod.db.config.js deploy/config.js"
 
   },
